samples/_failures_safe/1761546376_e3d25c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd906dad.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_cd906dad.c:173:5: error: expected declaration or statement at end of input
  173 |     switch (type) {
      |     ^~~~~~
./samples/SAFE/__tmp_cd906dad.c:173:5: error: expected declaration or statement at end of input
